fix: Ensure dropdown menus align with parent button.

--- a/knit-frontend/src/app/layout/buttons/dropdown/dropdown.css
+++ b/knit-frontend/src/app/layout/buttons/dropdown/dropdown.css
@@ -6,21 +6,24 @@
   display: inline-block;
 }
 
-/** TODO: Make dropdown menu start from button **/
+.dropdown-button {
+  background: rgb(255, 218, 230);
+  border: 1px solid rgba(255, 100, 150, 0.55);
+  border-radius: 3px;
+  cursor: pointer;
+}
 
+.dropdown-button:focus {
+  background: #ffc3d8;
+}
+
+/** TODO: Make dropdown menu start from button **/
 .dropdown-menu {
   position: absolute;
   background: rgb(255, 234, 239);
   border: 1px solid rgba(255, 100, 150, 0.55);
   z-index: 100;
   width: max-content !important;
-}
-
-.dropdown-button {
-  background: rgb(255, 218, 230);
-  border: 1px solid rgba(255, 100, 150, 0.55);
-  border-radius: 3px;
-  cursor: pointer;
 }
 
 .dropdown-item {
